--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
 		android:layout_height="match_parent">
 
 		<LinearLayout
-			android:id="@+id/email_login_form"
+			android:id="@+id/account_login_form"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:orientation="vertical">
@@ -61,7 +61,7 @@
 				android:singleLine="true"/>
 
 			<Button
-				android:id="@+id/email_sign_in_button"
+				android:id="@+id/account_sign_in_or_register_button"
 				style="?android:textAppearanceSmall"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
