updates to confirm two-way object communication. moved database operations to server side only. login working with minor bug on client side. added Comm Singleton to hold in/out streams.

--- a/app/src/main/res/layout/activity_server.xml
+++ b/app/src/main/res/layout/activity_server.xml
@@ -232,6 +232,13 @@
                 android:layout_height="wrap_content"
                 android:onClick="handleSendNewScoreOfButtonClick"/>
 
+            <Button
+                android:id="@+id/testButton"
+                android:text="Login\nTest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="handleLoginTestButtonClick"/>
+
         </LinearLayout>
 
         <Space
